src/main/fabric8/deploymentconfig.yaml
apiVersion: v1
kind: DeploymentConfig
metadata:
  name: ${project.artifactId}
spec:
  replicas: 1
  strategy:
    rollingParams:
      timeoutSeconds: 10800
    type: Rolling
  template:
    spec:
      containers:
      - env:
        - name: KUBERNETES_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        - name: JAVA_APP_DIR
          value: /deployments
        - name: SSO_AUTH_SERVER_URL
          value: ${SSO_AUTH_SERVER_URL}
        - name: REALM
          value: ${REALM}
        - name: REALM_PUBLIC_KEY
          value: ${REALM_PUBLIC_KEY}
        - name: CLIENT_ID
          value: ${CLIENT_ID}
        - name: SECRET
          value: ${SECRET}
        image: ${project.artifactId}:latest
        imagePullPolicy: IfNotPresent
        name: ${project.artifactId}
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        - containerPort: 9779
          name: prometheus
          protocol: TCP
        - containerPort: 8778
          name: jolokia
          protocol: TCP
        securityContext:
          privileged: false
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - ${project.artifactId}
      from:
        kind: ImageStreamTag
        name: ${project.artifactId}:latest
    type: ImageChange
