src/main/fabric8/route.yml
apiVersion: v1
kind: Route
metadata:
  name: secured-vertx-http
spec:
  to:
    name: "secured-vertx-http"
